<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:id="@+id/progressBarLogin"/>

    <ImageView
        android:id="@+id/gambar1"
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:src="@drawable/indonesia"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/menu_login"
        android:textColor="@android:color/black"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emaillogin"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_emaillogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/tv2"/>

    <EditText
        android:id="@+id/edt_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diisi_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/login"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btnAddData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/AddData"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btnRegisterLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/register"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gambar2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="start"
            android:src="@drawable/ipdn" />

        <ImageView
            android:id="@+id/gambar3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="start"
            android:src="@drawable/stan" />

        <ImageView
            android:id="@+id/gambar4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:src="@drawable/stin"/>
        <ImageView
            android:id="@+id/gambar5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:src="@drawable/stis"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="start"
                android:src="@drawable/stsn"
                android:id="@+id/gambar6"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="start"
                android:src="@drawable/stmkg"
                android:id="@+id/gambar7"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="start"
                android:src="@drawable/poltekim"
                android:id="@+id/gambar8"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="start"
                android:src="@drawable/poltekip"
                android:id="@+id/gambar9"/>

    </LinearLayout>
</LinearLayout>