<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:id="@+id/progressBar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang_di_form_Register"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:id="@+id/tvemail"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordlagi"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:id="@+id/tvpassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_password"
            android:inputType="textPassword"/>


        <Button
            android:id="@+id/registrasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerlagi"
            android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>